--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body>
-        <script src="script.js"></script>
+
+    <div id="buttons">
+    <button id="Rock">Rock</button>
+    <button id="Paper">Paper</button>
+    <button id="Scissor">Scissor</button>
+    </div>
+
+
+        <script src="script.js" defer></script>
     </body>
 </html>
+
