--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button id="Paper">Paper</button>
     <button id="Scissor">Scissor</button>
     </div>
+    <button id="Reset">Reset</button>
 
 
         <script src="script.js" defer></script>
