--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             border: 7px solid black;
             }
 
+            #Rock:hover, #Paper:hover, #Scissor:hover {
+                background-color: #45a049;
+            }
             .new {
                 font-size: 50px;
                 padding: 0px;
