fix resolution and layout problems

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div class="title">Rock-Paper-Scissor!</div>
     <div id="buttons">
         <div class="box1">
-            <img src="./images/Rock.jpeg" alt="a rock in pixelart" height="400" width="auto"> 
+            <img src="./images/Rock.jpeg" alt="a rock in pixelart" height="200" width="200"> 
             <button id="Rock">Rock</button>
         </div>
         <div class="box2">
-            <img src="./images/Paper.jpeg" alt="a paper in pixelart" height="400" width="auto">
+            <img src="./images/Paper.jpeg" alt="a paper in pixelart" height="200" width="200">
             <button id="Paper">Paper</button>
         </div>
         <div class="box3">
-            <img src="./images/Scissor.jpeg" alt="a scissor in pixelart" height="400" width="auto">
+            <img src="./images/Scissor.jpeg" alt="a scissor in pixelart" height="200" width="200">
             <button id="Scissor">Scissor</button>
         </div>
     </div>
